# expensy

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
api/: api_urls.py
api/serializers/: models.py
api/tests/: test_api.py
api/views/: views.py
data/: admin.py  data_expenses.sqlite3(copy)  models.py  settings.py  urls.py  wsgi.py
data/migrations/: 0001_initial.py
extract/: category_inference.py  macro.py  mercado_pago.py  mp_categories.py
load/: gcp_function.py  gsheet_load.py
serializers/: records.py
services/: google_sheet_actions.py  selenium_service.py
utils/: category_inference.py  date_format.py  string_format.py
wallet_load/: login.py  main.py
