[tool.poetry]
name = "extract"
version = "0.1.0"
description = ""
authors = ["Matias G. Sticchi <matgs656@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.25.0"
pandas = "^2.2.3"
psycopg2 = "^2.9.9"
django = "4.2"
gspread = "^6.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
